Fix text wrapping issue

--- a/src/components/CNCF/styles.module.css
+++ b/src/components/CNCF/styles.module.css
@@ -22,7 +22,8 @@
   font-weight: 600;
   color: var(--ifm-color-emphasis-800);
   margin: 0;
-  white-space: nowrap;
+  white-space: normal;
+  text-wrap: balance
 }
 
 .text a {
